fix login z-index

--- a/src/scss/login/login.scss
+++ b/src/scss/login/login.scss
@@ -19,6 +19,7 @@
   padding: 40px 30px 40px;
   text-align: center;
   box-shadow: 2px 2px 10px -2px $gray;
+  z-index: 10;
   *{
     color: $white;
   }
